# autocoral

./: package.xml  setup.cfg  setup.py
autocoral/: coral_move.py  target_detection.py
coral_move/: auto_movement.py  coral_move.py  target_detection.py
