<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autocoral</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eandid27@student.jhs.net">Drew Eandi</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>core</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python-numpy</depend>
  <depend>opencv-python</depend>
  <depend>python-matplotlib</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
